--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,12 @@
 <IfModule mod_rewrite.c>
-RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule (.+) index.php
-</IfModule>
 
+	RewriteEngine on
+
+	# if a directory or a file exists, use it directly
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteCond %{REQUEST_FILENAME} !-d
+
+	# otherwise forward it to index.php
+ 	RewriteRule (.+) index.php?p=$1 [QSA,L]
+ 	
+ </IfModule>
